<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/MoveRadioGroup"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/FiguresRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioDraw" />

        <RadioButton
            android:id="@+id/radioMove"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/radioMove" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/FiguresRadioGroup"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/MoveRadioGroup"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioRect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioRect" />

        <RadioButton
            android:id="@+id/radioCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioCircle" />

        <RadioButton
            android:id="@+id/radioTriangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioTriangle" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/Colors"
        app:layout_constraintEnd_toStartOf="@+id/btnUndo"
        app:layout_constraintStart_toEndOf="@+id/FiguresRadioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnUndo"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.drawshapes.MyView
        android:id="@+id/myView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoveRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>